//1. GET /orders
//2. POST /orders
syntax = "proto3";

package exchange;


enum Side {
  BUY = 0;
  SELL = 1;
}

message CreateOrderRequest {
  double price = 1;
  Side side = 2;
  int32 quantity = 3;
}

message CreateOrderResponse {
  string id = 1;
}
 
message GetOrdersRequest {
}

message Order {
  double price = 1;
  Side side = 2;
  int32 quantity = 3;
  Timestamp timestamp = 4;
}

message GetOrdersResponse {
  repeated Order orders = 1;
}
 
service Exchange {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc GetOrders(GetOrdersRequest) returns (GetOrdersResponse);
}